--- a/bin/gui/view/ViewCaixa.fxml
+++ b/bin/gui/view/ViewCaixa.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -18,30 +19,30 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="658.0" prefWidth="1190.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewCaixaController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="683.0" prefWidth="1344.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewCaixaController">
    <children>
-      <Line endX="1029.0" layoutX="161.0" layoutY="35.0" startX="-161.0" stroke="#827f7f" />
-      <Button fx:id="btAbrirFecharCaixa" layoutX="43.0" layoutY="55.0" mnemonicParsing="false" onAction="#onBtAbrirFecharCaixaAction" prefHeight="69.0" prefWidth="88.0">
+      <Line endX="1183.0" endY="7.62939453125E-6" layoutX="161.0" layoutY="35.0" startX="-161.0" stroke="#827f7f" />
+      <Button fx:id="btAbrirFecharCaixa" layoutX="45.0" layoutY="46.0" mnemonicParsing="false" onAction="#onBtAbrirFecharCaixaAction" prefHeight="63.0" prefWidth="164.0">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
          <graphic>
-            <ImageView fx:id="ivCaixa" fitHeight="59.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="ivCaixa" fitHeight="70.0" fitWidth="76.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../model/images/icons8_open_sign_96px.png" />
                </image>
             </ImageView>
          </graphic></Button>
-      <Line endX="1079.0" layoutX="111.0" layoutY="137.0" startX="-110.0" stroke="#827f7f" />
-      <Line endX="100.0" endY="455.0" layoutX="71.0" layoutY="134.0" startX="100.0" startY="-98.0" stroke="#827f7f" />
-      <Label layoutX="44.0" layoutY="195.0" text="Cliente:" />
-      <Label layoutX="41.0" layoutY="261.0" text="Atendente:" />
-      <Label layoutX="45.0" layoutY="324.0" text="Data" />
-      <ChoiceBox fx:id="cbFuncionario" layoutX="12.0" layoutY="279.0" prefWidth="150.0" />
-      <DatePicker fx:id="dpData" layoutX="11.0" layoutY="342.0" prefHeight="25.0" prefWidth="150.0" />
-      <TextField fx:id="tfValor" layoutX="12.0" layoutY="403.0" prefHeight="26.0" prefWidth="151.0" />
-      <Label layoutX="43.0" layoutY="385.0" text="Valor:" />
-      <Button fx:id="btEnviarTransacao" layoutX="64.0" layoutY="515.0" mnemonicParsing="false" onAction="#onBtEnviarTransacaoAction" text="Adicionar">
+      <Line endX="1233.0" layoutX="111.0" layoutY="137.0" startX="-110.0" stroke="#827f7f" />
+      <Line endX="100.0" endY="549.0" layoutX="155.0" layoutY="134.0" startX="100.0" startY="-98.0" stroke="#827f7f" />
+      <Label layoutX="42.0" layoutY="151.0" text="Cliente:" />
+      <Label layoutX="39.0" layoutY="217.0" text="Atendente:" />
+      <Label layoutX="43.0" layoutY="280.0" text="Data" />
+      <ChoiceBox fx:id="cbFuncionario" layoutX="10.0" layoutY="235.0" prefHeight="25.0" prefWidth="234.0" />
+      <DatePicker fx:id="dpData" layoutX="9.0" layoutY="298.0" prefHeight="25.0" prefWidth="150.0" />
+      <TextField fx:id="tfValor" layoutX="10.0" layoutY="359.0" prefHeight="26.0" prefWidth="151.0" />
+      <Label layoutX="41.0" layoutY="341.0" text="Valor:" />
+      <Button fx:id="btEnviarTransacao" layoutX="266.0" layoutY="642.0" mnemonicParsing="false" onAction="#onBtEnviarTransacaoAction" text="Adicionar">
          <graphic>
             <ImageView fitHeight="24.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -49,11 +50,9 @@
                </image>
             </ImageView>
          </graphic></Button>
-      <Label layoutX="28.0" layoutY="147.0" text="Adicione os valores" />
-      <Label layoutX="39.0" layoutY="164.0" text="Das transações" />
-      <TableView fx:id="tvTransacao" layoutX="172.0" layoutY="138.0" prefHeight="410.0" prefWidth="1007.0">
+      <TableView fx:id="tvTransacao" layoutX="256.0" layoutY="138.0" prefHeight="492.0" prefWidth="1089.0">
         <columns>
-          <TableColumn fx:id="colunaId" prefWidth="64.0" text="ID">
+          <TableColumn fx:id="colunaId" minWidth="0.0" prefWidth="65.0" text="ID">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -61,7 +60,7 @@
                      </image>
                   </ImageView>
                </graphic></TableColumn>
-            <TableColumn fx:id="colunaCliente" prefWidth="174.00001525878906" text="Cliente">
+            <TableColumn fx:id="colunaCliente" prefWidth="146.0" text="Cliente">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -69,7 +68,7 @@
                      </image>
                   </ImageView>
                </graphic></TableColumn>
-            <TableColumn fx:id="colunaAtendente" prefWidth="150.0" text="Atendente">
+            <TableColumn fx:id="colunaAtendente" prefWidth="161.0" text="Atendente">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -77,7 +76,7 @@
                      </image>
                   </ImageView>
                </graphic></TableColumn>
-            <TableColumn fx:id="colunaMeioPagamento" prefWidth="193.0" text="Meio de pagamento">
+            <TableColumn fx:id="colunaMeioPagamento" prefWidth="158.0" text="Meio de pagamento">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -85,7 +84,7 @@
                      </image>
                   </ImageView>
                </graphic></TableColumn>
-            <TableColumn fx:id="colunaValor" prefWidth="91.0" text="Valor">
+            <TableColumn fx:id="colunaValor" prefWidth="104.0" text="Valor">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -93,7 +92,34 @@
                      </image>
                   </ImageView>
                </graphic></TableColumn>
-            <TableColumn fx:id="colunaSelect" prefWidth="133.0" text="Excluir?">
+            <TableColumn fx:id="colunaServico" prefWidth="115.0" text="Serviço">
+               <graphic>
+                  <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_moleskine_96px_1.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </TableColumn>
+            <TableColumn fx:id="colunaObs" prefWidth="168.0" text="Observação">
+               <graphic>
+                  <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_talk_80px.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </TableColumn>
+          <TableColumn fx:id="colunaData" editable="false" minWidth="0.0" prefWidth="85.0" sortable="false" text="Data">
+               <graphic>
+                  <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_calendar_48px.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </TableColumn>
+            <TableColumn fx:id="colunaSelect" prefWidth="86.0" text="Excluir?">
                <graphic>
                   <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -101,43 +127,21 @@
                      </image>
                   </ImageView>
                </graphic></TableColumn>
-            <TableColumn prefWidth="200.0" text="Column X">
-               <columns>
-                <TableColumn fx:id="colunaData" editable="false" minWidth="0.0" prefWidth="200.0" sortable="false" text="Data">
-                     <graphic>
-                        <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../../model/images/icons8_calendar_48px.png" />
-                           </image>
-                        </ImageView>
-                     </graphic></TableColumn>
-               </columns>
-               <graphic>
-                  <DatePicker fx:id="dpSelecao" editable="false" onAction="#carregaTransacao" prefHeight="26.0" prefWidth="198.0" />
-               </graphic>
-            </TableColumn>
         </columns>
       </TableView>
-      <ChoiceBox fx:id="cbFormaPagamento" layoutX="11.0" layoutY="466.0" prefWidth="150.0" />
-      <Label layoutX="45.0" layoutY="447.0" text="Forma de pagamento" />
-      <Label layoutX="192.0" layoutY="81.0" text="Dinheiro dado:" />
-      <TextField fx:id="tfValorServico" layoutX="305.0" layoutY="49.0" prefHeight="25.0" prefWidth="79.0" />
-      <Label layoutX="183.0" layoutY="52.0" text="Valor do serviço:" />
-      <TextField fx:id="tfDinheiroDado" layoutX="305.0" layoutY="77.0" prefHeight="25.0" prefWidth="79.0" />
-      <Label fx:id="lbTroco" layoutX="434.0" layoutY="69.0" text="Troco de: " />
-      <Button fx:id="btCalTroco" layoutX="394.0" layoutY="64.0" mnemonicParsing="false" onAction="#calculaTroco" prefHeight="25.0" prefWidth="31.0" text="=" />
-      <Line endX="1074.0" layoutX="116.0" layoutY="548.0" startX="56.0" stroke="#827f7f" />
-      <Button fx:id="btExcluir" layoutX="181.0" layoutY="553.0" mnemonicParsing="false" onAction="#excluirTransacao" prefHeight="30.0" prefWidth="79.0" text="Excluir">
+      <ChoiceBox fx:id="cbFormaPagamento" layoutX="9.0" layoutY="418.0" prefWidth="150.0" />
+      <Label layoutX="43.0" layoutY="399.0" text="Forma de pagamento" />
+      <Line endX="1228.0" layoutX="116.0" layoutY="631.0" startX="141.0" stroke="#827f7f" />
+      <Button fx:id="btExcluir" layoutX="371.0" layoutY="642.0" mnemonicParsing="false" onAction="#excluirTransacao" prefHeight="32.0" prefWidth="79.0" text="Excluir">
          <graphic>
-            <ImageView fitHeight="22.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="24.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../model/images/icons8_trash_48px.png" />
                </image>
             </ImageView>
          </graphic></Button>
-      <Label layoutX="271.0" layoutY="562.0" text="Excluir transações selecionadas" />
-      <TextField fx:id="tfCliente" layoutX="12.0" layoutY="214.0" prefHeight="26.0" prefWidth="150.0" />
-      <GridPane layoutX="861.0" layoutY="50.0" prefHeight="65.0" prefWidth="403.0" vgap="10.0">
+      <TextField fx:id="tfCliente" layoutX="10.0" layoutY="170.0" prefHeight="26.0" prefWidth="234.0" />
+      <GridPane layoutX="266.0" layoutY="51.0" prefHeight="65.0" prefWidth="403.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="241.0" minWidth="10.0" prefWidth="202.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="0.0" prefWidth="34.0" />
@@ -212,7 +216,7 @@
             </Label>
          </children>
       </GridPane>
-      <GridPane layoutX="1014.0" layoutY="555.0" prefHeight="30.0" prefWidth="164.0">
+      <GridPane layoutX="1169.0" layoutY="642.0" prefHeight="30.0" prefWidth="164.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="178.0" minWidth="10.0" prefWidth="114.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="50.0" />
@@ -225,7 +229,7 @@
             <ProgressIndicator fx:id="piStatus" visible="false" GridPane.columnIndex="1" />
          </children>
       </GridPane>
-      <Button fx:id="btAjuda" layoutX="1110.0" layoutY="5.0" mnemonicParsing="false" onAction="#onBtAjudaAction" text="Ajuda">
+      <Button fx:id="btAjuda" layoutX="1264.0" layoutY="4.0" mnemonicParsing="false" onAction="#onBtAjudaAction" text="Ajuda">
          <graphic>
             <ImageView fitHeight="19.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -234,27 +238,27 @@
             </ImageView>
          </graphic>
       </Button>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="191.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="10.0" layoutY="147.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../model/images/icons8_businesswoman_48px.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="256.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="10.0" layoutY="212.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../model/images/icons8_female_worker_48px.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="320.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="10.0" layoutY="276.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../model/images/icons8_calendar_48px.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="379.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="10.0" layoutY="335.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../model/images/icons8_money_40px.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="443.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="10.0" layoutY="395.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../model/images/icons8_card_payment_40px_1.png" />
          </image>
@@ -280,6 +284,40 @@
             </Label>
          </children>
       </GridPane>
-      <TreeView fx:id="trvServicos" layoutX="10.0" layoutY="505.0" onMouseClicked="#printaValores" prefHeight="146.0" prefWidth="151.0" />
+      <TreeView fx:id="trvServicos" layoutX="10.0" layoutY="535.0" onMouseClicked="#printaValores" prefHeight="122.0" prefWidth="234.0" />
+      <TextField fx:id="tfObs" layoutX="10.0" layoutY="477.0" prefHeight="25.0" prefWidth="234.0" />
+      <Label layoutX="43.0" layoutY="460.0" text="Observação" />
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="453.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_talk_80px.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="38.0" layoutY="517.0" text="Serviços" />
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="9.0" layoutY="512.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_moleskine_96px_1.png" />
+         </image>
+      </ImageView>
+      <CheckBox fx:id="cbBloqueiaPreco" layoutX="165.0" layoutY="363.0" mnemonicParsing="false" onAction="#bloqDesbloqValor" selected="true" text="Bloq/Liberar" />
+      <DatePicker fx:id="dpSelecao" editable="false" layoutX="1114.0" layoutY="5.0" onAction="#carregaTransacao" prefHeight="26.0" prefWidth="140.0" />
+      <GridPane layoutX="1134.0" layoutY="42.0">
+        <columnConstraints>
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Valor do serviço:" />
+            <Label text="Dinheiro dado:" GridPane.rowIndex="1" />
+            <TextField fx:id="tfValorServico" prefHeight="25.0" prefWidth="79.0" GridPane.columnIndex="1" />
+            <TextField fx:id="tfDinheiroDado" prefHeight="25.0" prefWidth="79.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label fx:id="lbTroco" text="Troco de: " GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Button fx:id="btCalTroco" mnemonicParsing="false" onAction="#calculaTroco" prefHeight="25.0" prefWidth="37.0" text="=" GridPane.rowIndex="2" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
